# path_tracer

./: .gitignore  Cargo.toml  todo.md
assets/cornell/: cornell.gltf
assets/spheres/: spheres.gltf
crates/nrd-sys/: Cargo.toml  README.md  build.rs
crates/nrd-sys/src/: allocation.rs  ffi.rs  lib.rs  vulkano.rs
src/: camera.rs  config_window.rs  graphics.rs  input.rs  lib.rs  main.rs  material.rs  render_window.rs  renderer.rs
src/scene/: gltf.rs  mod.rs
src/scene/geometry/: mod.rs
src/shaders/: rchit.glsl  rgen.glsl  rmiss.glsl  shared.glsl
