[package]
name = "path_tracer"
version = "0.1.0"
edition = "2024"

[lib]

[[bin]]
name = "path_tracer"
path = "src/main.rs"

[dependencies]
gltf = { version = "1.4.1", features = [
    "KHR_lights_punctual",
    "KHR_materials_emissive_strength",
    "KHR_materials_ior",
    "KHR_materials_pbrSpecularGlossiness",
    "KHR_materials_specular",
    "KHR_materials_transmission",
    "KHR_materials_unlit",
    "KHR_materials_variants",
    "KHR_materials_volume",
    "KHR_texture_transform",
    "extensions",
    "extras",
    "guess_mime_type",
] }
bytemuck = { version = "1.22.0", features = ["derive"] }
glam = { version = "0.30.2", features = ["bytemuck"] }
legion = "0.4.0"
log = "0.4.27"
simple_logger = "5.0.0"
vulkano = "0.35.1"
vulkano-shaders = "0.35.0"
winit = "0.30.9"
rand = "0.9.1"
bytes = "1.10.1"
exr = "1.73.0"
egui_winit_platform = "0.26.0"
egui-wgpu = "0.31.1"
pollster = "0.4.0"
oidn = "2.3.2"
egui = "0.31.1"
image = "0.25.6"
rfd = "0.15.3"

[profile.release]
debug = true
# lto = "fat"
